--- a/src/style/input.scss
+++ b/src/style/input.scss
@@ -2,7 +2,7 @@ input[type=checkbox] {
   display: none;
 }
 
-.check-box {
+.input-checkbox {
   margin-right: 5px;
   height: 16px;
   width: 16px;
@@ -38,16 +38,16 @@ input[type=checkbox] {
   }
 }
 
-input[type=checkbox]:checked + .check-box, .check-box.checked {
+input[type=checkbox]:checked + .input-checkbox, .input-checkbox.checked {
   border-color: #608a8e;
 }
 
-input[type=checkbox]:checked + .check-box::after, .check-box.checked::after {
+input[type=checkbox]:checked + .input-checkbox::after, .input-checkbox.checked::after {
   height: 9px;
   width: 3px;
 }
 
-input[type=checkbox]:checked + .check-box::before, .check-box.checked::before {
+input[type=checkbox]:checked + .input-checkbox::before, .input-checkbox.checked::before {
   height: 18px;
   width: 3px;
 }
