--- a/src/style/input.scss
+++ b/src/style/input.scss
@@ -92,12 +92,14 @@ $input-pseudo: #608a8e;
   border: 0.5px solid $input-border;
   border-radius: 50%;
 }
-
-.input-radio:checked + .input-radio-label .input-radio-span {
+.input-radio-span {
   width: 9.6px;
   height: 9.6px;
   display: inline-block;
   border-radius: 50%;
+  background-color: none;
+}
+.input-radio:checked + .input-radio-label .input-radio-span {
   background-color: $input-background;
   border: solid 0.5px $input-border;
 }
