input-text border색 변경

--- a/entry-frontend/src/style/input.scss
+++ b/entry-frontend/src/style/input.scss
@@ -67,7 +67,7 @@ $input-pseudo: #608a8e;
   height: 40px;
   border-radius: 5px;
   background-color: #ffffff;
-  border: solid 1px #5f8a90;
+  border: solid 1px #A1B6B9;
   padding: 11px 16px 10px;
   width: 400px;
   font-size: 18px;
