BaseURL 변경 비밀번호 규칙설명 수정 중학교 이름이 긴 학교를 예외처리

--- a/entry-frontend/src/style/input.scss
+++ b/entry-frontend/src/style/input.scss
@@ -89,9 +89,7 @@ $input-pseudo: #608a8e;
 }
 
 .input-radio + .input-radio-label {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   width: 16px;
   height: 16px;
   border: 1px solid $input-border;
@@ -107,4 +105,8 @@ $input-pseudo: #608a8e;
 .input-radio:checked + .input-radio-label .input-radio-span {
   background-color: $input-background;
   border: solid 1px $input-border;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
