Feature/frontend fix preview (#118)
* radio 스타일 오류 수정

* 졸업자 연도 수정

* 학교이름 바인딩 오류 해결

* 서약자 보호자 이름 바인딩

* 지원자 보호자 이름 스타일수정

* console.log 지움

* 사진, 국가유공자 인증 위치변경, 날짜 바인딩, 학교장인증 체크

* 이미지 추가

--- a/entry-frontend/src/style/input.scss
+++ b/entry-frontend/src/style/input.scss
@@ -98,7 +98,10 @@ $input-pseudo: #608a8e;
 .input-radio-span {
   width: 9px;
   height: 9px;
-  display: inline-block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 50%;
   background-color: none;
 }
